remove files that are not necessary in natura-express

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "index.js",
-  "name": "@naturacosmeticos/node-base",
+  "name": "@naturacosmeticos/natura-express",
   "author": "Natura Cosméticos <TDDAArquitetura@natura.net>",
   "version": "1.1.13",
   "engines": {
@@ -33,12 +33,10 @@
     "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
     "lint": "eslint src/ test/",
     "lint:fix": "eslint --fix src/ test/",
-    "test": "mocha --recursive --require test/helpers/start.js --exit",
-    "test:unit": "mocha --recursive --require test/helpers/start.js",
-    "test:coverage": "nyc mocha --recursive --require test/helpers/start.js",
-    "test:watch": "mocha -w",
-    "transpile": "echo ok",
-    "package": "bash package.sh"
+    "test": "mocha --recursive --exit",
+    "test:unit": "mocha --recursive",
+    "test:coverage": "nyc mocha --recursive",
+    "test:watch": "mocha -w"
   },
   "nyc": {
     "all": true,
@@ -52,10 +50,6 @@
       "src/**/*.js"
     ],
     "exclude": [
-      "src/development/*inspector*.js",
-      "src/message-queue/**/*.js",
-      "src/module.js",
-      "src/orm/**/*.js",
       "test/**/*.js"
     ],
     "reporter": [
@@ -89,7 +83,7 @@
     "uuid": "^3.3.2",
     "yargs": "^13.0.0-candidate.0"
   },
-  "homepage": "https://github.com/natura-cosmeticos/node-base#readme",
-  "bugs": "https://github.com/natura-cosmeticos/node-base/issues",
+  "homepage": "https://github.com/natura-cosmeticos/natura-express#readme",
+  "bugs": "https://github.com/natura-cosmeticos/natura-express/issues",
   "license": "MIT"
 }
